# Connect

./: .env  .env.sample  Dockerfile  Dockerfile_backend  Dockerfile_database  Dockerfile_frontend  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
api/: main.py
api/cruds/: visited.py
api/routers/: place.py  visited.py
api/templates/: hoge.html
backend/: .env.sample  Dockerfile  pyproject.toml
backend/api/: database.py  db.py  main.py  migrate_db.py
backend/api/cruds/: crud_auth.py  crud_place.py  crud_visited.py  place.py
backend/api/models/: model_place.py  model_user.py  model_visited.py
backend/api/routers/: route_auth.py  route_place.py  route_visited.py
backend/api/schemas/: schema_auth.py  schema_place.py  schema_visited.py
backend/api/utils/: auth.py
backend/tests/: test_main.py
data/: gourmand.csv
frontend/: package-lock.json  package.json
mysql/: Dockerfile  my.cnf
