[tool.poetry]
name = "connect"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.39"
aiomysql = "^0.1.1"
python-decouple = "^3.6"
passlib = "^1.7.4"
fastapi-csrf-protect = "^0.2.2"
PyJWT = "^2.4.0"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.18.3"
aiosqlite = "^0.17.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
